# innerwarden

./: .gitignore  ANCHOR_TESTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  THREAT_MODEL.md  agent-test.toml  agents-install.md  codecov.yml  config.example.toml  deny.toml  install.sh  registry.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: announce-release.yml  ci.yml  codecov.yml  codeql.yml  fuzz.yml  heap-budget.yml  installer.yml  release.yml  scorecard.yml  security.yml  stale.yml  validate-modules.yml  verify-doc-vs-source.yml  verify-retired-integrations.yml
.specify/features/001-telegram-interactive-triage/: tasks.md
.specify/features/002-telegram-triage-v2/: tasks.md
.specify/features/004-setup-zero-friction/: plan.md  spec.md  tasks.md
.specify/features/005-intelligent-notifications/: plan.md  spec.md  tasks.md
.specify/features/006-azure-training-sprint/: plan.md  spec.md
.specify/features/007-dashboard-confidence-system/: plan.md  spec.md  tasks.md
.specify/features/008-incident-humanization/: plan.md  spec.md  tasks.md
.specify/features/009-knowledge-graph-phase2/: spec.md  tasks.md
.specify/features/010-detector-migration-phase3/: plan.md  spec.md  tasks.md
.specify/features/011-realtime-critical-detectors/: plan.md  spec.md  tasks.md
.specify/features/012-eliminate-jsonl/: plan.md  spec.md  tasks.md
.specify/features/013-graph-single-source/: spec.md
.specify/features/014-graph-full-connectivity/: spec.md
.specify/features/015-graph-signal-quality/: spec.md
.specify/features/020-zero-trust-mdr/: spec.md
.specify/features/021-observation-verification/: spec.md
.specify/features/022-dashboard-tests/: spec.md
.specify/features/023-coverage-closeout/: spec.md
.specify/features/025-structured-ai-prompt/: spec.md
.specify/features/026-decomposition-for-testability/: spec.md
.specify/features/028-incident-lifecycle-bugs/: spec.md
.specify/features/052-minimal-lsm-refactor/: spec.md
crates/agent/: Cargo.toml
crates/agent-guard/benchmarks/: SCOREBOARD.md  agent_attack_corpus.yml
crates/agent-guard/examples/: agent_attack_benchmark.rs  guardrail_bench.rs
crates/agent-guard/src/: benchmark.rs  detect.rs  lib.rs  mcp.rs  registry.rs  rules.rs  session.rs  signatures.rs  threats.rs
crates/agent/src/: abuseipdb.rs  agent_context.rs  agent_discovery.rs  agent_registry_reconcile.rs  allowlist.rs  attacker_intel.rs  baseline.rs  bot_actions.rs  bot_commands.rs  config.rs  (+97 more)
crates/ctl/: Cargo.toml
crates/dna/: Cargo.toml
crates/dna/src/: anomaly.rs  api.rs  attack_chain.rs  classifier.rs  fingerprint.rs  ingest.rs  lib.rs  main.rs  sequence.rs  store.rs
crates/hypervisor/: Cargo.toml
crates/hypervisor/src/: cpuid.rs  descriptor_tables.rs  detect.rs  kvm.rs  lib.rs  main.rs  memory_probe.rs  probes.rs  timing.rs  vmexit.rs
crates/killchain/: Cargo.toml
crates/killchain/src/: bridge.rs  config.rs  detector.rs  lib.rs  main.rs  metrics.rs  patterns.rs  redis.rs  tracker.rs  types.rs
crates/sensor/: Cargo.toml
crates/shield/: Cargo.toml
crates/smm/: Cargo.toml
crates/smm/src/: acpi.rs  baseline.rs  correlator.rs  cpu_features.rs  ebpf_audit.rs  kintegrity.rs  ktext.rs  lib.rs  main.rs  measurement_chain.rs  microcode.rs  msr.rs  smi.rs  spi.rs  timing.rs  tpm.rs  trace_of_times.rs  uefi.rs
crates/store/: Cargo.toml
crates/store/src/: cursors.rs  decisions.rs  error.rs  events.rs  graph.rs  incidents.rs  kv.rs  lib.rs  maintenance.rs  migration.rs  schema.rs  state_blobs.rs
crates/supervisor/: Cargo.toml
crates/supervisor/src/: alerts.rs  health.rs  hook.rs  lib.rs  main.rs  monitor.rs  symlink.rs
docs/: supply-chain-security.md
docs/innerwarden-gym/: README.md
docs/integration-recipes/: claude-code-agent-guard.md  n8n-agent-guard.md
docs/internal/: bug-hunt-2026-04-18.md  iso-27001-mapping.md  setup-wizard.md  wiki-agent-update.md
examples/systemd/: innerwarden-agent.service  innerwarden-sensor.service  innerwarden-supervisor.service
integrations/: README.md
modules/claude-code-protection/: module.toml
modules/openclaw-protection/: module.toml
rules/event_pipeline/: README.md
scripts/: SMOKE_TEST_MAP.md  deploy-prod.sh  open-setup-preview.sh  replay_qa.sh  scenario_qa.sh  scenario_seed.py  setup-wizard.sh  smoke-all.sh  verify-agents-install-commands.sh  verify-doc-vs-source.sh  verify-lsm-hooks.sh  verify-readme-counts.sh  verify-retired-integrations.sh
specs/collectors/: dns_capture.yml
specs/detectors/: dns_tunneling.yml  service_stop.yml
testdata/: expected.json
testdata/fixtures/: events.jsonl
(+311 files in other folders)
