[package]
name = "innerwarden-dna"
version.workspace = true
edition.workspace = true
license = "Proprietary"
repository.workspace = true
homepage.workspace = true
description = "Behavioral threat fingerprinting — identifies attackers by behavior, not IP"
publish = false

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"
sha2 = "0.10"
hex = "0.4"

# Binary-only deps (for standalone daemon)
axum = { version = "0.7", features = ["json"], optional = true }
clap = { version = "4", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
notify = { version = "7", default-features = false, features = ["macos_kqueue"], optional = true }

[target.'cfg(not(target_os = "macos"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

[features]
default = []
daemon = ["tokio/full", "axum", "clap", "tracing-subscriber", "notify", "tikv-jemallocator"]

[[bin]]
name = "innerwarden-dna"
required-features = ["daemon"]

[dev-dependencies]
tempfile = "3"
