[package]
name = "innerwarden-smm"
version.workspace = true
edition.workspace = true
license = "BUSL-1.1"
repository.workspace = true
homepage.workspace = true
description = "Ring -2 firmware security — SMM monitoring, MSR guards, SPI flash integrity, UEFI/TPM attestation"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
nix = { version = "0.29", features = ["fs", "uio"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
