[package]
name = "innerwarden-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Unified SQLite storage backend for InnerWarden sensor and agent."
keywords = ["security", "storage", "sqlite", "embedded-database", "rust"]
categories = ["database", "data-structures"]

[dependencies]
innerwarden_core = { path = "../core" }
rusqlite = { version = "0.34", features = ["bundled", "backup", "blob"] }
r2d2 = "0.8"
r2d2_sqlite = "0.27"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
anyhow = "1"
tracing = "0.1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
