[package]
name = "innerwarden-supervisor"
description = "Process supervisor for innerwarden-agent: crash recovery with rate limiting, HTTP health check, telegram alerts, and a RestartHook extension point for paid anti-tamper layers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
name = "innerwarden_supervisor"
path = "src/lib.rs"

[[bin]]
name = "innerwarden-supervisor"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
nix = { version = "0.31", features = ["signal", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "3", features = ["json"] }

[dev-dependencies]
tempfile = "3"
